# rds-filetransfer

./: Cargo.toml  README.md  app-18ff3cccfb7c420c.css  index-46fea9f0b413d716.js  index-46fea9f0b413d716_bg.wasm  index-5ab5009dfdb1a070.js  index-5ab5009dfdb1a070_bg.wasm  index-85d24090f70fa474.js  index-85d24090f70fa474_bg.wasm  index.html
src/: app.css  header.rs  home.rs  main.rs  recv.rs  routes.rs  send.rs
