[package]
name = "rds-filetransfer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.18"
yew-router = "0.15"
wasm-bindgen = "0.2"
qrcode = "0.11"
wee_alloc = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]
