[package]
name = "rds-filetransfer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.18"
yew-router = "0.15"
qrcode = "0.11"
wee_alloc = "0.4"
js-sys = "0.3"
quircs = "0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Navigator",
    "MediaStream",
    "MediaDevices",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "OffscreenCanvas",
    "CanvasRenderingContext2d",
    "ImageData",
    "CssStyleDeclaration",
]
